syntax = "proto3";

package spec.proto.extension.v1.phone;

option go_package = "mosn.io/layotto/spec/proto/extension/v1/phone;phone";

/* @exclude skip ci_generator */
// PhoneCallService API is used to send voice messages.
service PhoneCallService {

  // Send voice using the specific template
  rpc SendVoiceWithTemplate(SendVoiceWithTemplateRequest) returns (SendVoiceWithTemplateResponse) {}

}

// The request of SendVoiceWithTemplate method
message SendVoiceWithTemplateRequest{

  // If your system uses multiple IVR services at the same time,
  // you can specify which service to use with this field.
  string component_name = 1;

  // Required
  VoiceTemplate template = 2;

  // Required
  repeated string to_mobile = 3;

  // This field is required by some cloud providers.
  string from_mobile = 4;

}

// VoiceTemplate
message VoiceTemplate{

  // Required
  string template_id = 1;

  // Required
  map<string, string>  template_params = 2;

}

// The response of `SendVoiceWithTemplate` method
message SendVoiceWithTemplateResponse{

  // Id of this request.
  string request_id = 1;

}
